ok to send static file